--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <!--20250558-Mariela Cordova -->
-    <h1>Significado del operador Mod</h1>
-    <h3>El MOD es el residuo de una division </h3>
+    <h1 style="text-align: justify;">Significado del operador Mod</h1>
+    <p>
+    <h3>El MOD es el residuo de una division normal, es lo que sobra al dividir dos numeros </h3>
+
+    <img src="pseint.jpg" alt="" width="450px" height="400px;">
+    <h3>Es el sobrante de una division</h3>
+    <img src="mod.jpg" alt="">
+    </p>
 </body>
 </html>
